--- a/server/build.gradle
+++ b/server/build.gradle
@@ -24,6 +24,10 @@ dependencies {
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.8.1'
     implementation 'com.google.code.gson:gson:2.9.0'
 
+    // https://mvnrepository.com/artifact/org.postgresql/postgresql
+    implementation 'org.postgresql:postgresql:42.3.4'
+
+
     implementation project(':common')
 }
 
